Ejercicio4_ecejjo/4_ejercicio4_ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress  
metadata:  
  name: ecejjo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:  
  rules:
  - host: www.ecejjo.com
    http:
      paths:
      - path: /anuncios(/|$)(.*)
        backend:
          serviceName: ejercicio4-ecejjo-app
          servicePort: 8080
      - path: /anuncio(/|$)(.*)
        backend:
          serviceName: ejercicio4-ecejjo-app
          servicePort: 8080
      - path: /nuevoAnuncio.html
        backend:
          serviceName: ejercicio4-ecejjo-app
          servicePort: 8080
